--- a/style.css
+++ b/style.css
@@ -1295,11 +1295,11 @@ button.is_active span {
 	visibility: hidden;
 }
 
-/*Mobile Stuff*/
+/* Mobile Stuff */
 
 @media screen and (max-width: 600px) {
 
-	/*Index page and menu*/
+	/* Index page and menu */
 	.container::before {
 		width: 100%;
 	}
@@ -1321,7 +1321,7 @@ button.is_active span {
 		right: 20%;
 	}
 
-	/*About me page*/
+	/* About me page */
 
 	#hd3 {
 		position: relative;
@@ -1338,6 +1338,7 @@ button.is_active span {
 		margin-top: 5%;
 		width: 75%;
 		padding-bottom: 10px;
+		text-align: justify;
 	}
 
 	#MyPic {
@@ -1345,7 +1346,7 @@ button.is_active span {
 		display: none;
 	}
 
-	/*Achievements page*/
+	/* Achievements page */
 
 	.word {
 		position: relative;
@@ -1353,6 +1354,7 @@ button.is_active span {
 		top: 100%;
 		padding-top: 5%;
 		margin-left: 0%;
+		width: 75%;
 	}
 
 	.word span {
@@ -1372,6 +1374,26 @@ button.is_active span {
 
 	.img-placeholder {
 		font-size: 1rem;
+	}
+
+	/* Experience page */
+
+	#hd {
+		position: relative;
+		left: 22%;
+		top: 100%;
+		padding-top: 5%;
+		margin-left: 0%;
+		font-size: 3rem;
+		width: 75%;
+	}
+
+	#timeline {
+		position: relative;
+		left: 22%;
+		width: 75%;
+		height: 0%;
+		margin-top: 5%;
 	}
 
 }
