--- a/style.css
+++ b/style.css
@@ -1376,7 +1376,12 @@ button.is_active span {
 		font-size: 1rem;
 	}
 
-	/* Experience page */
+	/* Experience page, too small for mobile so removed */
+
+	.menu-inner ul li:nth-child(4)
+	{
+		display: none;
+	}
 
 	#hd {
 		position: relative;
@@ -1395,6 +1400,32 @@ button.is_active span {
 		width: 75%;
 		height: 0%;
 		margin-top: 5%;
+	}
+
+	/* Skills page */
+
+	.stats {
+		left: 22%;
+		width: 75%;
+		top: 0%;
+	}
+
+	.stats__list {
+		top: 0%;
+	}
+
+	.stats__header {
+		margin-left: 0%;
+	}
+
+	.stats__overlay-avg {
+		width: 50%;
+		height: 35%;
+		left: 60%;
+	}
+
+	.stats__overlay-avg .avg {
+		font-size: 2rem;
 	}
 
 	/* References page */
@@ -1431,7 +1462,7 @@ button.is_active span {
 	}
 
 	#card {
-		width: 105%;
+		width: 104%;
 		height: auto;
 	}
 
