--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ a {
 	width: 300px;
 	transition: 1000ms all cubic-bezier(0.19, 1, 0.22, 1);
 	transform: translateX(-100%);
-	left: 60px;
+	left: 15%;
 	z-index: 2;
 	color: white;
 
@@ -1309,8 +1309,8 @@ button.is_active span {
 	}
 
 	.container {
-		left: 20%;
-		width: 80%;
+		left: 0%;
+		width: 100%;
 	}
 
 	.container p {
@@ -1319,6 +1319,11 @@ button.is_active span {
 
 	#SubText {
 		left: 60%;
+	}
+
+	.contents {
+		width: 90%;
+		margin-left: 20%;
 	}
 
 	#blob {
@@ -1330,16 +1335,18 @@ button.is_active span {
 	#hd3 {
 		position: relative;
 		font-size: 3rem;
-		left: 22%;
+		margin-left: 20%;
 		padding-top: 5%;
 		width: 75%;
 		height: auto;
+		left: 0%;
 	}
 
 	#MainText {
 		position: relative;
-		left: 22%;
+		left: 0%;
 		margin-top: 5%;
+		margin-left: 20%;
 		width: 75%;
 		padding-bottom: 10px;
 		text-align: justify;
@@ -1354,10 +1361,9 @@ button.is_active span {
 
 	.word {
 		position: relative;
-		left: 22%;
 		top: 100%;
 		padding-top: 5%;
-		margin-left: 0%;
+		margin-left: 20%;
 		width: 75%;
 	}
 
@@ -1367,12 +1373,12 @@ button.is_active span {
 
 	.img-list {
 		position: relative;
-		margin-left: 19%;
+		margin-left: 17%;
 		margin-top: 5%;
 	}
 
 	.img-list li {
-		width: 100%;
+		width: 98%;
 		padding-left: 0px;
 	}
 
@@ -1389,10 +1395,9 @@ button.is_active span {
 
 	#hd {
 		position: relative;
-		left: 22%;
 		top: 100%;
 		padding-top: 5%;
-		margin-left: 0%;
+		margin-left: 20%;
 		font-size: 3rem;
 		width: 75%;
 		height: 0px;
@@ -1432,6 +1437,11 @@ button.is_active span {
 		font-size: 2rem;
 	}
 
+	.stats__overlay-back {
+		margin-left: 20%;
+		margin-top: 30%;
+	}
+
 	/* References page */
 
 	.home-title {
@@ -1444,10 +1454,10 @@ button.is_active span {
 	#projects ul {
 		position: relative;
 		top: 0%;
-		width: 75%;
+		width: 78%;
 		margin-top: 20%;
 		left: 0%;
-		margin-left: 20.5%;
+		margin-left: 17%;
 	}
 
 	#projects li {
