--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ a {
 	width: 300px;
 	transition: 1000ms all cubic-bezier(0.19, 1, 0.22, 1);
 	transform: translateX(-100%);
-	left: 15%;
+	left: 60px;
 	z-index: 2;
 	color: white;
 
