--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-:root {
-	--main-color: #008080;
-}
-
 /*start_text*/
 html,
 body,
@@ -145,8 +141,8 @@ body {
 #SubText {
 	font-size: 1rem;
 	position: absolute;
-	top: 70%;
-	left: 50%;
+	margin-top: -42vh;
+	left: 102vh;
 	z-index: 2;
 	font-family: Roboto;
 }
@@ -197,7 +193,7 @@ a {
 
 .container p span.typed-text {
 	font-weight: 950;
-	color: var(--main-color);
+	color: #008080;
 }
 
 .container p span.cursor {
@@ -234,13 +230,14 @@ a {
 	}
 }
 
+
 /*Menu*/
 
 
 #menu {
 	height: 100%;
 	position: fixed;
-	background-color: var(--main-color);
+	background-color: #008080;
 	width: 300px;
 	transition: 1000ms all cubic-bezier(0.19, 1, 0.22, 1);
 	transform: translateX(-100%);
@@ -272,7 +269,7 @@ a {
 
 #blob-path {
 	height: 100%;
-	fill: var(--main-color);
+	fill: #008080;
 }
 
 .hamburger {
@@ -350,7 +347,6 @@ a {
 	font-family: 'Roboto';
 	font-weight: 700;
 
-
 }
 
 /* title styles */
@@ -388,89 +384,89 @@ a {
 
 .home-title span:nth-of-type(1)::before,
 .home-title span:nth-of-type(1)::after {
-	animation-delay: 0.4s;
+	animation-delay: 0.8s;
 }
 
 .home-title span:nth-of-type(2)::before,
 .home-title span:nth-of-type(2)::after {
-	animation-delay: 1.2s;
+	animation-delay: 0.9s;
 }
 
 .home-title span:nth-of-type(3)::before,
 .home-title span:nth-of-type(3)::after {
-	animation-delay: 1.3s;
+	animation-delay: 1s;
 }
 
 
 .home-title span:nth-of-type(4)::before,
 .home-title span:nth-of-type(4)::after {
-	animation-delay: 1.5s;
+	animation-delay: 1.1s;
 }
 
 .home-title span:nth-of-type(5)::before,
 .home-title span:nth-of-type(5)::after {
-	animation-delay: 1.6s;
+	animation-delay: 1.2s;
 }
 
 .home-title span:nth-of-type(6)::before,
 .home-title span:nth-of-type(6)::after {
-	animation-delay: 1.7s;
+	animation-delay: 1.3s;
 }
 
 
 .home-title span:nth-of-type(7)::before,
 .home-title span:nth-of-type(7)::after {
-	animation-delay: 1.8s;
+	animation-delay: 1.4s;
 }
 
 .home-title span:nth-of-type(8)::before,
 .home-title span:nth-of-type(8)::after {
-	animation-delay: 1.9s;
+	animation-delay: 1.5s;
 }
 
 .home-title span:nth-of-type(9)::before,
 .home-title span:nth-of-type(9)::after {
-	animation-delay: 2s;
+	animation-delay: 1.6s;
 }
 
 .home-title span:nth-of-type(10)::before,
 .home-title span:nth-of-type(10)::after {
-	animation-delay: 2.1s;
+	animation-delay: 1.7s;
 }
 
 .home-title span:nth-of-type(11)::before,
 .home-title span:nth-of-type(11)::after {
-	animation-delay: 2.3s;
+	animation-delay: 1.8s;
 }
 
 .home-title span:nth-of-type(12)::before,
 .home-title span:nth-of-type(12)::after {
-	animation-delay: 2.4s;
+	animation-delay: 1.9s;
 }
 
 .home-title span:nth-of-type(13)::before,
 .home-title span:nth-of-type(13)::after {
-	animation-delay: 2.5s;
+	animation-delay: 2s;
 }
 
 .home-title span:nth-of-type(14)::before,
 .home-title span:nth-of-type(14)::after {
-	animation-delay: 2.6s;
+	animation-delay: 2.1s;
 }
 
 .home-title span:nth-of-type(15)::before,
 .home-title span:nth-of-type(15)::after {
-	animation-delay: 2.7s;
+	animation-delay: 2.2s;
 }
 
 .home-title span:nth-of-type(16)::before,
 .home-title span:nth-of-type(16)::after {
-	animation-delay: 2.8s;
+	animation-delay: 2.3s;
 }
 
 .home-title span:nth-of-type(17)::before,
 .home-title span:nth-of-type(17)::after {
-	animation-delay: 2.9s;
+	animation-delay: 2.4s;
 }
 
 @keyframes a-ltr-after {
@@ -510,7 +506,7 @@ a {
 	-webkit-text-stroke-width: 3px;
 	-webkit-text-stroke-color: white;
 	text-shadow:
-		8px 8px var(--main-color),
+		8px 8px #008080,
 		20px 20px #000000;
 }
 
@@ -525,6 +521,8 @@ a {
 	z-index: -1;
 	/*    border-radius: 100%;*/
 }
+
+
 
 
 
@@ -700,6 +698,8 @@ a {
 	opacity: .35;
 	transform: scale(1);
 }
+
+
 
 /*Falling Text*/
 
@@ -906,6 +906,14 @@ a {
 	left: 25%;
 	top: 100px;
 	width: 70%;
+
+
+}
+
+@media (max-width: 690px) {
+	.stats {
+		width: 100%;
+	}
 }
 
 .stats__header {
@@ -1007,7 +1015,7 @@ a {
 	margin-right: 0;
 }
 
-/**@media (max-width: 690px) {
+@media (max-width: 690px) {
 	.stats__item {
 		float: none;
 		height: auto;
@@ -1067,7 +1075,7 @@ a {
 	.stats__item .stats__item-num {
 		margin-right: 25px;
 	}
-}*/
+}
 
 .stats__item:hover {
 	opacity: 0.7;
@@ -1113,6 +1121,12 @@ a {
 	transform: none;
 }
 
+@media (max-width: 690px) {
+	.stats__overlay {
+		padding: 12.5px;
+	}
+}
+
 .stats__overlay-avg {
 	position: absolute;
 	top: 50%;
@@ -1137,11 +1151,28 @@ a {
 	font-weight: 700;
 }
 
+@media (max-width: 690px) {
+	.stats__overlay-avg {
+		width: 240px;
+		height: 240px;
+	}
+
+	.stats__overlay-avg .avg {
+		font-size: 65px;
+	}
+}
+
 .stats__overlay-info {
 	position: absolute;
 	bottom: 25px;
 	left: 50px;
 	display: flex;
+}
+
+@media (max-width: 690px) {
+	.stats__overlay-info {
+		left: 25px;
+	}
 }
 
 .stats__overlay-info-half {
@@ -1156,6 +1187,12 @@ a {
 .stats__overlay-info-half p:first-child {
 	font-size: 50px;
 	font-weight: 700;
+}
+
+@media (max-width: 690px) {
+	.stats__overlay-info-half p:first-child {
+		font-size: 24px;
+	}
 }
 
 .stats__overlay-back {
@@ -1180,6 +1217,12 @@ a {
 	margin: 0 0 0 12.5px;
 }
 
+@media (max-width: 690px) {
+	.stats__overlay-back p {
+		font-size: 18px;
+	}
+}
+
 #hd {
 	font-family: 'Anton', sans-serif;
 	margin-left: 30%;
@@ -1199,9 +1242,8 @@ a {
 }
 
 #hd3 {
-	position: absolute;
 	font-family: 'Anton', sans-serif;
-	left: 42%;
+	margin-left: 42%;
 	height: 100px;
 	width: 45%;
 	padding-top: 9%;
@@ -1227,18 +1269,19 @@ a {
 }
 
 button {
+
 	position: absolute;
-	top: 70%;
-	left: 50%;
+	top: 50%;
+	left: 12px;
 	transform: translate(-50%, -50%);
 	width: 170px;
 	height: 40px;
 	line-height: 1;
 	font-size: 18px;
 	letter-spacing: 1px;
-	border: 1px solid var(--main-color);
+	border: 1px solid #008080;
 	background: rgba(25, 25, 25, 0);
-	color: var(--main-color);
+	color: #008080;
 	border-radius: 40px;
 	cursor: pointer;
 	overflow: hidden;
@@ -1246,7 +1289,7 @@ button {
 }
 
 button:hover {
-	background: var(--main-color);
+	background: #008080;
 	color: #fff;
 }
 
@@ -1273,7 +1316,7 @@ button span {
 .success svg {
 	width: 20px;
 	height: 20px;
-	fill: var(--main-color);
+	fill: #008080;
 	transform-origin: 50% 50%;
 	transform: translateY(-50%) rotate(0deg) scale(0);
 	transition: all .35s;
@@ -1299,7 +1342,388 @@ button.is_active span {
 	visibility: hidden;
 }
 
-/* Mobile Stuff */
+/*Mobile Stuff*/
+
+/*Media Start*/
+
+/*tablet*/
+@media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+	.container p {
+		font-size: 4rem;
+		padding: 0.2rem;
+		letter-spacing: 0.1rem;
+	}
+
+	#SubText {
+		left: 75%;
+	}
+
+	.container {
+		height: 100vh;
+		width: 100vh;
+		margin-bottom: 0;
+	}
+
+	.container::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100vh;
+		height: 150vh;
+		background-image: url("Me4.jpg");
+		background-repeat: no-repeat;
+		background-size: cover;
+		filter: brightness(17%);
+
+	}
+
+	#MyPic {
+		height: 36vh;
+		width: 24vh;
+		top: 40%;
+		/*margin-left:-%;*/
+
+	}
+
+	.home-title #hd {
+		padding-top: 19vh;
+
+	}
+
+
+
+	#MainText {
+		width: 38vh;
+	}
+
+	#hd3 {
+		width: 85%;
+		padding-left: 9%;
+		padding-top: 52%;
+	}
+
+	#MainText {
+		padding-left: 9%;
+		width: 78.5%;
+		top: 48%;
+	}
+
+	.img-list {
+		height: 48vh;
+
+	}
+
+	.img-list li {
+		width: 100%;
+		height: 100%;
+
+	}
+
+	.img-list li img {
+		height: 20vh
+	}
+
+	.img-list {
+		display: flex;
+	}
+
+	#col1,
+	#col2 {
+		display: grid;
+		width: 45%;
+	}
+
+
+	.img-placeholder:before,
+	.img-placeholder:after {
+		padding-top: 25%;
+		content: "";
+		display: inline-block;
+
+	}
+
+	#timeline {
+		padding-top: 47%;
+		margin-left: 13%;
+	}
+
+	#mainCont p {
+		width: 26vh;
+		margin-left: 31%;
+	}
+
+	#hd {
+		font-size: 100px;
+		width: 60vh;
+		padding-top: 50%;
+		padding-left: 20%
+	}
+
+	#projects li a {
+		height: 20vh;
+		width: 30vh;
+		position: absolute;
+
+
+	}
+
+	#projects li {
+		position: relative;
+		float: none;
+		width: 50%;
+		height: 70%;
+		margin-left: 10%;
+		height: 28vh;
+		top: -10%;
+
+
+	}
+
+	.home-title {
+		width: 44vh
+	}
+
+	#ref #hd {
+		margin-left: 52px;
+		width: 64vh
+	}
+
+	#ref .home-title {
+		width: 57vh;
+	}
+
+}
+
+/*Media End*/
+
+/*Desktop*/
+
+/*@media only screen   
+and (min-width: 1370px)   
+{ 
+      .container p{
+         font-size: 6rem;
+         padding: 0.2rem;
+         letter-spacing: 0.1rem;
+    }
+    
+    #SubText{
+        left:60%;  
+        height:150px;
+    }
+    
+    button span{
+        font-size: 40px;
+       
+    }
+    
+    #SubText button{
+        height:85px;
+        width:370px;
+        top:0%;
+    }
+    
+    .wrapper{
+        height:150px;
+    }
+    
+    .container{
+        height: 100vh;
+        width:100vh;
+        margin-bottom:0;
+    }
+    
+    .container::before
+{
+   content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100vh; height: 118vh;
+  background-image: url("Me4.jpg");
+  background-repeat: no-repeat;
+  background-size:cover;
+  filter:brightness(17%);
+  
+}
+    
+    #MyPic{
+        height:40vh;
+        width:26vh;
+        top:39%;
+        margin-left:6%;
+            
+    } 
+    
+    .home-title #hd{
+        padding-top: 19vh;
+        
+    }
+    
+    
+   
+    #MainText{
+        width:38vh;
+    }
+    #hd3{
+        width:85%;
+        padding-left:14%;
+        padding-top:45%;
+        font-size:138px;
+    }
+    
+    #MainText{
+        padding-left:14%;
+        width: 78.5%;
+        top:40%;
+        font-size:20px;
+    }
+ 
+    .img-list{
+        height: 48vh;       
+        
+    }
+.img-list li {
+width:100%;
+height:100%;
+    padding-top:13px;
+    
+}
+    
+    .img-list li img{
+        height:20vh;
+        width:30vh;
+    }
+    
+    .img-list{
+        display:flex;
+    }
+    
+    #col1, #col2{display:grid;width:45%;}
+    
+   
+    
+
+.img-placeholder:before,
+.img-placeholder:after {
+padding-top: 25%;
+content: "";
+display:inline-block;
+
+}  
+
+    #timeline{
+        padding-top:47%;
+        margin-left:13%;
+    }
+    
+    #mainCont p{
+       width:29vh;
+       margin-left:31%;
+    }
+    
+    #hd{
+        font-size: 110px;
+        width:65vh;
+        padding-top:500px;;
+        padding-left:43%
+    }
+    
+    
+    
+    #projects li a{
+        height:18vh;
+        width:30vh;
+        position:absolute;
+        
+        
+    }
+    
+    #descript{
+        padding-left:4%;
+    }
+    
+    #projects li{
+  position:relative;
+  float:none;
+  width:50%;
+  height:70%;
+margin-left:10%;
+    height: 28vh;
+        top:-10%;
+        
+  
+}
+    .home-title{
+        width:44vh;
+        padding-top:15%;
+    }
+    
+   .stats .stats__list{
+        padding-top:30%;
+    }
+    
+    .stats{
+        padding-top:15%;
+        margin-left:-50px;
+    }
+    
+    .stats__header-num p{
+        font-size: 125px;
+        padding-top:10px;
+        padding-left:100px;
+        
+    }
+    
+    .stats__header-name p{
+        font-size: 40px;
+    }
+    
+    .stats__header-name p span{
+        font-size: 60px;
+    }
+    
+    .stats__item-num{
+        font-size:15px;
+    }
+    
+    #ref #hd{
+        margin-left:-52px;
+        width:75vh;
+        margin-top:-250px;;
+    }
+    
+    #ref .home-title{
+        width:57vh;
+    }
+} */
+
+/*Thomas Laptop*/
+@media screen and (min-width: 1024px) and (max-width: 1370px) {
+	#ref #hd {
+		width: 53%;
+	}
+
+	#MyPic {
+		top: 21%;
+		height: auto;
+	}
+
+	.stats {
+		left: 20%;
+		top: 0px;
+	}
+
+	#hd {
+		margin-left: 25%;
+		width: 51%;
+	}
+
+	#projects ul {
+		top: 40%;
+		left: 22%;
+	}
+}
 
 @media screen and (max-width: 768px) {
 
@@ -1388,8 +1812,7 @@ button.is_active span {
 
 	/* Experience page, too small for mobile so removed */
 
-	.menu-inner ul li:nth-child(4)
-	{
+	.menu-inner ul li:nth-child(4) {
 		display: none;
 	}
 
@@ -1420,7 +1843,8 @@ button.is_active span {
 	}
 
 	.stats ul {
-		width: 100%;;
+		width: 100%;
+		;
 	}
 
 	.stats__header {
@@ -1447,7 +1871,8 @@ button.is_active span {
 	.home-title {
 		position: relative;
 	}
-	.home-title > #hd {
+
+	.home-title>#hd {
 		font-size: 2.2rem;
 	}
 
@@ -1478,32 +1903,5 @@ button.is_active span {
 	#card {
 		width: 104%;
 		height: auto;
-	}
-
-}
-
-/* This is my screen resolution. You'll have to it to fit in between the ones you've made.*/
-@media screen and (min-width: 1280px) {
-	#ref #hd {
-		width: 53%;
-	}
-
-	#MyPic {
-		top: 21%;
-		height: auto;
-	}
-
-	.stats {
-		left: 20%;
-	}
-
-	#hd {
-		margin-left: 25%;
-		width: 51%;
-	}
-
-	#projects ul {
-		top: 40%;
-		left: 22%;
 	}
 }
